// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Frontmatter and Component Generation > Multiple components with props 1`] = `
{
  "code": "<script>
	import CustomComponent from './test/components/CustomComponent.svelte';
	import AnotherComponent from './test/components/AnotherComponent.svelte';
</script>
<article><CustomComponent title="Welcome" description="This is a test component"><p>This is the content inside the custom component. It can contain <strong>markdown</strong> and other elements.</p></CustomComponent><AnotherComponent status="active" count="5"><p>This is content inside another component. It shows the status and count values.</p></AnotherComponent></article>",
  "dependencies": [
    "/Users/christopher/Documents/markdoc-svelte/test/markdoc/tags/index.ts",
  ],
}
`;

exports[`Frontmatter and Component Generation > No components 1`] = `
{
  "code": "<article><h1>Regular Content</h1></article>",
  "dependencies": [
    "/Users/christopher/Documents/markdoc-svelte/test/markdoc/tags/index.ts",
  ],
}
`;

exports[`Frontmatter and Component Generation > No frontmatter 1`] = `
{
  "code": "<article><h1>Regular Markdown Content</h1></article>",
  "dependencies": [
    "/Users/christopher/Documents/markdoc-svelte/test/markdoc/tags/index.ts",
  ],
}
`;

exports[`Frontmatter and Component Generation > With frontmatter 1`] = `
{
  "code": "<article><hr /><p>title: Test Title author: Test Author tags: [test, markdoc]</p><hr /><h1>Content with Frontmatter</h1></article>",
  "dependencies": [
    "/Users/christopher/Documents/markdoc-svelte/test/markdoc/tags/index.ts",
  ],
}
`;

exports[`Frontmatter and Component Generation > With layout and frontmatter 1`] = `
{
  "code": "<script>
	import Layout_MARKDOC from '$lib/SimpleLayout.svelte';
</script>
<Layout_MARKDOC>
<article><hr /><p>title: Layout Test description: Testing layout with frontmatter</p><hr /><h1>Page with a Layout</h1><p>This content should be wrapped by a layout.</p></article>
</Layout_MARKDOC>",
  "dependencies": [
    "/Users/christopher/Documents/markdoc-svelte/test/markdoc/tags/index.ts",
  ],
}
`;
